# qk

./: .gitignore  CLAUDE.md  COMMANDS.md  COMMANDS_CN.md  CONTRIBUTING.md  Cargo.toml  LESSON_LEARNED.md  LESSON_LEARNED_CN.md  PROGRESS.md  PROGRESS_CN.md  README.md  README_CN.md  RELEASE.md  ROADMAP.md  RUST_GUIDE.md  STRUCTURE.md  STRUCTURE_CN.md  TUTORIAL.md  TUTORIAL_CN.md  install.sh
.github/workflows/: ci.yml  release.yml
.trae/documents/: qk_comprehensive_review.md
docs/: CLAUDE_CN.md  COMMANDS.md  COMMANDS_CN.md  COMMANDS_WRONG.md  COMMANDS_WRONG_CN.md  FAQ.md  LESSON_LEARNED.md  LESSON_LEARNED_CN.md  PROGRESS.md  PROGRESS_CN.md  RUST_GUIDE.md  STRUCTURE_CN.md  TUTORIAL.md  TUTORIAL_CN.md
homebrew-qk/Formula/: qk.rb
src/: cli.rs  config.rs  detect.rs  main.rs  record.rs
src/output/: color.rs  csv_out.rs  mod.rs  ndjson.rs  pretty.rs  table.rs
src/parser/: csv.rs  logfmt.rs  mod.rs  ndjson.rs  plaintext.rs  toml_fmt.rs  yaml.rs
src/query/: mod.rs
src/query/dsl/: ast.rs  eval.rs  parser.rs
src/query/fast/: eval.rs  parser.rs
src/tui/: app.rs  events.rs  mod.rs  ui.rs
src/util/: cast.rs  decompress.rs  error.rs  intern.rs  mmap.rs  mod.rs  time.rs
tests/: dsl_layer.rs  error_messages.rs  fast_layer.rs  formats.rs  large_file.rs  stability.rs
tests/fixtures/: sample.csv  sample.logfmt  sample.ndjson  sample.toml  sample.yaml  timeseries.ndjson
tests/integration/: fast_layer.rs  formats.rs
tutorial/: config.toml  data.json  events.tsv  notes.txt  scores.ndjson  services.logfmt  services.yaml  users.csv
