[package]
name = "qk"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
description = "一个替代 grep/awk/sed/jq/yq 的快速结构化查询工具"
license = "MIT"

[[bin]]
name = "qk"
path = "src/main.rs"

[dependencies]
clap      = { version = "4", features = ["derive"] }
serde     = { version = "1", features = ["derive", "rc"] }
serde_json = "1"
indexmap  = { version = "2", features = ["serde"] }
csv       = "1"
memchr    = "2"
thiserror = "1"
owo-colors = "3"
# Phase 3 — parallel + mmap
rayon   = "1"
memmap2 = "0.9"
# Phase 4 — DSL
nom   = "7"
regex = "1"
# Phase 5 — more formats + decompression
serde_yaml = "0.9"
toml       = "0.8"
flate2     = "1"
# Phase 6 — table output
comfy-table = "7"
# Phase 8 — time-series bucketing
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
# Phase 9 — interactive TUI
ratatui   = "0.26"
crossterm = "0.27"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile   = "3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
